--- a/product.html
+++ b/product.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <!----create products cards here with hover effect and responsiveness------>
+    <h>products page</h>
     <!-----Footer---->
     <!------footer ends-->
 
