--- a/contactus.html
+++ b/contactus.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact us</title>
+    <link rel="stylesheet" href="/css/contactus.css">
 </head>
 <body>
-    
+    <h1>contact us</h1>
 </body>
 </html>
