--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     <nav class="navbar">
         <div class="navbar-brand">Amazon logo</div>
         <ul class="navbar-links">
-            <li><a href="/">Home</a></li>
-            <li><a href="#products">Products</a></li>
-            <li><a href="#login">Login</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/product.html">Products</a></li>
+            <li><a href="/login.html">Login</a></li>
             <li><a href="#signup">Signup</a></li>
             <li><a href="#contactus">Contact Us</a></li>
         </ul>
     </nav>
 
     <!----Add cards for accesories like watch mobile et-->
-    <main></main>
+   
+    
+    
     <!---ends--->
 
 
