--- a/product.html
+++ b/product.html
@@ -9,6 +9,34 @@
 <body>
     <!----create products cards here with hover effect and responsiveness------>
     <h>products page</h>
+
+    <!--sample products list made to add "add to cart" funtionality-->
+    
+    <div class="product">
+        <h2>Product 1</h2>
+        <p>Price: $10</p>
+        <button onclick="addToCart('Product 1', 10)">Add to Cart</button>
+    </div>
+
+    <div class="product">
+        <h2>Product 2</h2>
+        <p>Price: $15</p>
+        <button onclick="addToCart('Product 2', 15)">Add to Cart</button>
+    </div>
+
+    <div class="product">
+        <h2>Product 3</h2>
+        <p>Price: $20</p>
+        <button onclick="addToCart('Product 3', 20)">Add to Cart</button>
+    </div>
+
+    <!-- Cart Section -->
+    <div class="cart">
+        <h2>Shopping Cart</h2>
+        <div id="cart-items"></div>
+        <p id="total">Total: $0</p>
+    </div>
+    
     <!-----Footer---->
     <!------footer ends-->
 
