Added a responsive searchbar to navbar

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <!---Add your navbar here with all the pages linked to it-->
     <nav class="navbar">
         <div class="navbar-brand">Amazon logo</div>
+
+        <div class="nav-search-section">
+            <input class="search-bar" type="text" placeholder="Search">
+    
+            <button class="search-button">
+              <img class="search-icon" src="images/search-icon.png">
+            </button>
+        </div>
+
         <ul class="navbar-links">
             <li><a href="/index.html">Home</a></li>
             <li><a href="/product.html">Products</a></li>
