--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <li><a href="/index.html">Home</a></li>
             <li><a href="/product.html">Products</a></li>
             <li><a href="/login.html">Login</a></li>
-            <li><a href="#signup">Signup</a></li>
-            <li><a href="#contactus">Contact Us</a></li>
+            <li><a href="/Signup.html">Signup</a></li>
+            <li><a href="/contactus.html">Contact Us</a></li>
         </ul>
     </nav>
 
