--- a/Signup.html
+++ b/Signup.html
@@ -4,10 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
- <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="css/signup.css">
 </head>
 <body>
-    <!----signup page with hover effect and responsiveness-->
-    <h1>signup</h1>
+    <div class="main">
+        <img src="images/logo.png" alt="amazon-logo">
+        <div id="Signup">
+            <p id="signintext">Create Account</p>
+    
+       <label for="">
+        <strong>Your Name</strong>
+        <br>
+        <input type="text" name="name" id="" placeholder="Enter your number">
+        <br>
+       </label>
+       <label for="">
+        <strong>Mobile Number</strong>
+        <br>
+        <input type="number" name="number" id="" placeholder="Enter your number">
+        <br>
+       </label>
+       <label for="">
+        <strong>Password</strong>
+        <span><a href="#" id="password">forget password ?</a></span>
+        <br>
+        <input type="password" name="password" id="" placeholder="Password">
+       </label>
+           <div class="info">
+                       <p>To verify your number, we will send you a text message with a temporary code. Message and data rates may apply.</p>
+           </div>
+       <div>
+        <button id="button">Verify mobile number</button>
+       </div>
+       <br>
+        <hr>
+       <div class="buy">
+        <strong>Buying for work?</strong>
+        <br>
+        <a href="#">Create a free business account</a>
+       </div>
+           <div class="signin">
+            <br>
+            <p>Already have an account ?</p>
+            <a href="#">Sign In</a>
+           </div>
+           <div class="footer">
+            <p id="links"><a href="#" id="first">Conditions of use</a>
+            <a href="#">Notice of use</a>
+        <a href="#">Help</a></p>
+        <p class="links" id="special">1996-2016,Amazon.com,Inc. or its affiliates</p>
+           </div>
+    </div>
 </body>
 </html>
