--- a/login.html
+++ b/login.html
@@ -5,23 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/login.css">
 </head>
 
 <body>
-    <div class="login-container">
-        <h1>Login</h1>
-        <form class="login-form">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required>
-
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
-
-            <button type="submit">Login</button>
-        </form>
-        <p class="signup-link">Don't have an account? <a href="#">Sign up here</a></p>
-    </div>
+    <!----login us page starts -->
 </body>
 
 </html> 
