corrected index.html

--- a/Signup.html
+++ b/Signup.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Signup</title>
-    <link rel="stylesheet" href="/css/signup.css">
-</head>
+    <link rel="stylesheet" href="/css/signup.css" />
+  </head>
 
-<body>
+  <body>
     <!----signup page with hover effect and responsiveness-->
     <h1>signup</h1>
-</body>
-
+  </body>
 </html>
