--- a/contactus.html
+++ b/contactus.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact Us</title>
-    <link rel="stylesheet" href="/css/contactus.css">
-</head>
+    <link rel="stylesheet" href="/css/contactus.css" />
+  </head>
 
-<body>
+  <body>
     <!---contactus page starts here -->
     <!--ends here-->
-</body>
-
+  </body>
 </html>
-
-
-
