Added shopping cart functionality with dynamic item management and total calculation.

--- a/Signup.html
+++ b/Signup.html
@@ -9,8 +9,35 @@
 </head>
 
 <body>
-    <!----signup page with hover effect and responsiveness-->
-    <h1>signup</h1>
+    <!-- Navbar -->
+    <nav class="navbar">
+        <div class="navbar-brand">Amazon Logo</div>
+        <ul class="navbar-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="product.html">Products</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
+        </ul>
+    </nav>
+
+    <!-- Signup Form -->
+    <div class="container">
+        <div class="signup-box">
+            <h2>Sign Up</h2>
+            <form>
+                <label for="name">Your Name</label>
+                <input type="text" id="name" placeholder="Enter your name" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" placeholder="Enter your email" required>
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Enter your password" required>
+                <label for="confirm-password">Re-enter Password</label>
+                <input type="password" id="confirm-password" placeholder="Re-enter your password" required>
+                <button type="submit" class="signup-button">Create your Amazon account</button>
+            </form>
+        </div>
+    </div>
 </body>
 
 </html>
