--- a/index.html
+++ b/index.html
@@ -4,35 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazon clone</title>
+    <title>Amazon Clone</title>
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <!---Add your navbar here with all the pages linked to it-->
+    <!-- Navbar -->
     <nav class="navbar">
-        <div class="navbar-brand">Amazon logo</div>
+        <div class="navbar-brand">Amazon Logo</div>
         <ul class="navbar-links">
-
-            <li><a href="\index.html">Home</a></li>
-            <li><a href="\product.html">Products</a></li>
-            <li><a href="\login.html">Login</a></li>
-            <li><a href="\Signup.html">Signup</a></li>
-            <li><a href="\contactus.html">Contact Us</a></li>
-
-           
-
+            <li><a href="index.html">Home</a></li>
+            <li><a href="product.html">Products</a></li>
+            <li><a href="login.html">Login</a></li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="contactus.html">Contact Us</a></li>
         </ul>
     </nav>
 
-    <!----Add cards for accesories like watch mobile et-->
+    <!-- Hero Section -->
+    <section class="hero">
+        <h1>Welcome to Amazon Clone</h1>
+        <p>Shop our wide range of products!</p>
+        <a href="product.html" class="shop-now-button">Shop Now</a>
+    </section>
 
-
-
-    <!---ends--->
-
-
-    <!----Footer-->
+    <!-- Footer -->
     <footer class="amazon-footer">
         <div class="footer-container">
             <div class="footer-section">
@@ -54,7 +50,6 @@
                     <li><a href="#">Advertise Your Products</a></li>
                     <li><a href="#">Become an Affiliate</a></li>
                     <li><a href="#">Self-Publish with Us</a></li>
-                    <li><a href="#">Host an Amazon Hub</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -65,29 +60,19 @@
                     <li><a href="#">Amazon Coins</a></li>
                 </ul>
             </div>
-           
             <div class="footer-section">
                 <h3>Need Help?</h3>
                 <ul>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">Shipping Rates</a></li>
                     <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Manage Your Content and Devices</a></li>
-                    <li><a href="#">Amazon Assistant</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p> &copy; 2023 Amazon.com, Inc. or its affiliates</p>
-            <div class="social-media">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            </div>
+            <p>&copy; 2023 Amazon.com, Inc. or its affiliates</p>
         </div>
     </footer>
-    <!---footer ends-->
 </body>
 
 </html>
