Added nav bar in signup page

--- a/Signup.html
+++ b/Signup.html
@@ -10,6 +10,19 @@
 
 <body>
     <!----signup page with hover effect and responsiveness-->
+    <nav class="navbar">
+        <div class="navbar-brand">Amazon logo</div>
+        <ul class="navbar-links">
+
+            <li><a href="\index.html">Home</a></li>
+            <li><a href="\product.html">Products</a></li>
+            <li><a href="\login.html">Login</a></li>
+            <li><a href="\contactus.html">Contact Us</a></li>
+
+           
+
+        </ul>
+    </nav>
     <div class="container">
         <div class="signup-box">
             <img src="https://upload.wikimedia.org/wikipedia/commons/a/a9/Amazon_logo.svg" alt="Amazon Logo" class="logo">
