--- a/product.html
+++ b/product.html
@@ -9,6 +9,21 @@
 </head>
 
 <body>
+
+    <nav class="navbar">
+        <div class="navbar-brand">Amazon logo</div>
+        <ul class="navbar-links">
+
+            <li><a href="\index.html">Home</a></li>
+            <li><a href="\product.html">Products</a></li>
+            <li><a href="\login.html">Login</a></li>
+            <li><a href="\Signup.html">Signup</a></li>
+            <li><a href="\contactus.html">Contact Us</a></li>
+
+           
+
+        </ul>
+    </nav>
     <!----create products cards here with hover effect and responsiveness------>
     <h>products page</h>
 
