--- a/index.html
+++ b/index.html
@@ -9,21 +9,50 @@
 </head>
 
 <body>
-    <!---Add your navbar here with all the pages linked to it-->
-    <nav class="navbar">
-        <div class="navbar-brand">Amazon logo</div>
-        <ul class="navbar-links">
-
-            <li><a href="\index.html">Home</a></li>
-            <li><a href="\product.html">Products</a></li>
-            <li><a href="\login.html">Login</a></li>
-            <li><a href="\Signup.html">Signup</a></li>
-            <li><a href="\contactus.html">Contact Us</a></li>
-
-           
-
-        </ul>
-    </nav>
+    <!-- -Add your navbar here with all the pages linked to it -->
+    <div class="separator"><header>
+        <div class="navbar">
+            <div class="logo">
+                <img src="Asset/icons8-amazon-50.png" alt="">
+            </div>
+            <div class="location">
+                <span>Deliver to Thane 400601</span>
+                <a class="Updateclass" href="#">Update location</a>
+            </div>
+            <div class="search-bar">
+                <select>
+                    <option>All</option>
+                </select>
+                <input type="text" placeholder="Search Amazon.in">
+                <button>
+                    <img src="Asset/magnifying-glass.png" alt="Search Icon">
+                </button>
+            </div>
+            <div class="account-links">
+                <div><a href="#">Hello, sign in <br> Account & Lists</a></div>
+            <div><a href="#">Returns <br> & Orders</a></div>
+        <div><a href="#" class="cart">
+                    <img src="Asset/icons8-cart-50.png" alt="Cart Icon">
+                    Cart
+                </a></div>
+            </div>
+        </div>
+        <div class="sub-navbar">
+            <div class="boxsub">
+            <a href="#">All</a>
+            <a href="#">Fresh</a>
+            <a href="#">MX Player</a>
+            <a href="#">Sell</a>
+            <a href="#">Best Sellers</a>
+            <a href="#">Today's Deals</a>
+            <a href="#">Mobiles</a>
+            <a href="#">Electronics</a>
+            <a href="#">Home & Kitchen</a>
+            <a href="#">Prime</a>
+            <a href="#">Customer Service</a>
+        </div>
+        </div>
+    </header>
 
     <!----Add cards for accesories like watch mobile et-->
 
@@ -87,6 +116,7 @@
             </div>
         </div>
     </footer>
+</div>
     <!---footer ends-->
 </body>
 
