--- a/Signup.html
+++ b/Signup.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup</title>
-    <link rel="stylesheet" href="/css/signup.css">
+    <link rel="stylesheet" href="css/signup.css">
 </head>                 
 
 <body>          
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="Assets/icons8-amazon-50.png" alt="">
+                <img src="Asset\icons8-amazon-50.png" alt="">
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
@@ -24,14 +24,14 @@
                 </select>
                 <input type="text" placeholder="Search Amazon.in">
                 <button>
-                    <img src="Assets/magnifying-glass.png" alt="Search Icon">
+                    <img src="Asset\magnifying-glass.png" alt="Search Icon">
                 </button>
             </div>
             <div class="account-links">
                 <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/login.html">Login</a></div>
             <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/Signup.html">SignUp</a></div>
             <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/product.html" class="cart">
-                <img src="Assets/icons8-cart-50.png" alt="Cart Icon">
+                <img src="Asset\icons8-cart-50.png" alt="Cart Icon">
                 Our Products
             </a></div>
             <div><a href="http://127.0.0.1:5501/Amazon-Hacktoberfest2024/contactus.html">Contact Us</a></div>
@@ -55,7 +55,28 @@
     </header>
     </nav>
     <!----signup page with hover effect and responsiveness-->
-    <h1>signup</h1>
+    <div class="container">
+        <div class="form-box">
+            <h2>Create Account</h2>
+            <form>
+                <div class="input-group">
+                    <label for="name">Your Name</label>
+                    <input type="text" id="name" placeholder="Enter your name" required>
+                </div>
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email" required>
+                </div>
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Enter your password" required>
+                </div>
+                <button type="submit" class="signup-btn">Sign Up</button>
+            </form>
+            <p>Already have an account? <a href="#">Sign in</a></p>
+        </div>
+    </div>    
+    
 </body>
 
 </html>
