--- a/Signup.html
+++ b/Signup.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="Asset\icons8-amazon-50.png" alt="">
+                <img src="/Asset/icons8-amazon-50.png" alt="">
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
@@ -24,17 +24,17 @@
                 </select>
                 <input type="text" placeholder="Search Amazon.in">
                 <button>
-                    <img src="Asset\magnifying-glass.png" alt="Search Icon">
+                    <img src="/Asset/magnifying-glass.png" alt="Search Icon">
                 </button>
             </div>
             <div class="account-links">
-                <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/login.html">Login</a></div>
-            <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/Signup.html">SignUp</a></div>
-            <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/product.html" class="cart">
-                <img src="Asset\icons8-cart-50.png" alt="Cart Icon">
+                <div><a href="/login.html">Login</a></div>
+            <div><a href="/Signup.html">SignUp</a></div>
+            <div><a href="/product.html" class="cart">
+                <img src="/Asset/icons8-cart-50.png" alt="Cart Icon">
                 Our Products
             </a></div>
-            <div><a href="http://127.0.0.1:5501/Amazon-Hacktoberfest2024/contactus.html">Contact Us</a></div>
+            <div><a href="/contactus.html">Contact Us</a></div>
             </div>
         </div>
         <div class="sub-navbar">
@@ -53,7 +53,7 @@
         </div>
         </div>
     </header>
-    </nav>
+    
     <!----signup page with hover effect and responsiveness-->
     <div class="container">
         <div class="form-box">
