--- a/login.html
+++ b/login.html
@@ -12,29 +12,29 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="Assets/icons8-amazon-50.png" alt="">
+                <img src="/Asset/icons8-amazon-50.png" alt="">
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
                 <a class="Updateclass" href="#">Update location</a>
-            </div>     
+            </div>
             <div class="search-bar">
                 <select>
-                    <option>All</option>
+                    <option>All</option>          
                 </select>
                 <input type="text" placeholder="Search Amazon.in">
                 <button>
-                    <img src="Assets/magnifying-glass.png" alt="Search Icon">
+                    <img src="/Asset/magnifying-glass.png" alt="Search Icon">
                 </button>
             </div>
             <div class="account-links">
-                <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/login.html">Login</a></div>
-            <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/Signup.html">SignUp</a></div>
-            <div><a href="http://127.0.0.1:3002/Amazon-Hacktoberfest2024/product.html" class="cart">
-                <img src="Assets/icons8-cart-50.png" alt="Cart Icon">
+                <div><a href="/login.html">Login</a></div>
+            <div><a href="/Signup.html">SignUp</a></div>
+            <div><a href="/product.html" class="cart">
+                <img src="/Asset/icons8-cart-50.png" alt="Cart Icon">
                 Our Products
             </a></div>
-            <div><a href="http://127.0.0.1:5501/Amazon-Hacktoberfest2024/contactus.html">Contact Us</a></div>
+            <div><a href="/contactus.html">Contact Us</a></div>
             </div>
         </div>
         <div class="sub-navbar">
@@ -53,7 +53,6 @@
         </div>
         </div>
     </header>
-    </nav>
 
     <!----login us page starts -->
     <div class="container">
