--- a/index.html
+++ b/index.html
@@ -56,7 +56,50 @@
     </header>
 
     <!----Add cards for accesories like watch mobile et-->
-
+    <div class="shop-section">
+        <div class="box1 box">
+            <div class="box-content"><h2>Health & Personal Care</h2>
+                <img src="Asset/box2_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content"><h2>Furniture</h2>
+                <img src="Asset/box3_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content"><h2>Beauty Picks</h2>
+                <img src="Asset/box5_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+    
+        <div class="box4 box">
+            <div class="box-content"><h2>Kids Toys</h2>
+                <img src="Asset/box7_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+        <div class="box1 box">
+            <div class="box-content"><h2>Pet Care</h2>
+                <img src="Asset/box6_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content"><h2>New Arrivals in Clothes</h2>
+                <img src="Asset/box8_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content"><h2>Electronics</h2>
+                <img src="Asset/box4_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+    
+        <div class="box4 box">
+            <div class="box-content"><h2>Wardrobe</h2>
+                <img src="Asset/box1_image.jpg" alt="">
+            <a>Shop now</a></div>
+        </div>
+    </div>
 
 
     <!---ends--->
