--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
     <header>
         <div class="navbar">
             <div class="logo">
-                <img src="/Asset/icons8-amazon-50.png" alt="">
+                <a href="/index.html"><img src="/Asset/icons8-amazon-50.png"></a>  
             </div>
             <div class="location">
                 <span>Deliver to Thane 400601</span>
